Fix viewport on small devices

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,6 +9,13 @@
     padding: 3rem 4rem;
 }
 
+@media (max-width: 530px) {
+    .page-header h1 {
+        font-size: 3.2rem;
+        color: red;
+    }
+}
+
 /* PROJECT NAME */
 
 .project-name {
